--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -4,10 +4,12 @@
     margin: 0;
 }
 
+/* Body of webpage */
 body {
     background-color: #d9dcd6;
 }
 
+/* Header class, as well as the items within it*/
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -41,15 +43,18 @@ body {
     margin-left: 25px;
 }
 
+/* Styling the links in the page */
 a {
     color: #ffffff;
     text-decoration: none;
 }
 
+/* Paragraph style */
 p {
     font-size: 16px;
 }
 
+/* Coordinates with the div class 'hero' in the html file, goes with everything underneath the main header */
 .hero {
     height: 800px;
     width: 100%;
@@ -59,6 +64,7 @@ p {
     background-position: center;
 }
 
+/* Setting the attributes of the float-left and float-right classes */
 .float-left {
     float: left;
     margin-right: 25px;
@@ -69,12 +75,14 @@ p {
     margin-left: 25px;
 }
 
+/* Setting the attributes of the content class in the page */
 .content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
+/* Setting the attributes of the benefits class, as well as some additional areas within that class */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -134,6 +142,7 @@ p {
     max-width: 150px;
 }
 
+/* Code following this area stylizes what our toolbar links end up shortcutting us to - the three areas with more information concerning what this psuedo company actually does. */
 .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
@@ -188,6 +197,7 @@ p {
     font-size: 36px;
 }
 
+/* Contains footer stylization */
 .footer {
     padding: 30px;
     clear: both;
